@@ -8,7 +8,7 @@
   <!-- JMH version to use with this project. -->
   <jmh.version>1.35</jmh.version>
   <!-- Java source/target to use for compilation. -->
-  <javac.target>18</javac.target>
+  <java-version>18</java-version>
   <!-- Name of the benchmark Uber-JAR to generate. -->
   <uberjar.name>benchmarks</uberjar.name>
   <commons-math3-version>3.6.1</commons-math3-version>
@@ -145,9 +145,14 @@
     <artifactId>maven-compiler-plugin</artifactId>
     <version>3.8.1</version>
     <configuration>
-     <compilerVersion>${javac.target}</compilerVersion>
-     <source>${javac.target}</source>
-     <target>${javac.target}</target>
+     <compilerVersion>${java-version}</compilerVersion>
+     <source>${java-version}</source>
+     <target>${java-version}</target>
+     <release>${java-version}</release>
+     <compilerArgs>
+      <arg>-J-Dclojure.compiler.direct-linking=true</arg>
+      <arg>--enable-preview</arg>
+     </compilerArgs>
     </configuration>
    </plugin>
    <plugin>
@@ -227,7 +232,7 @@
      <configuration>
       <trimStackTrace>false</trimStackTrace>
       <!-- argLine>-Xmx2G -XX:MaxPermSize=512M</argLine -->
-      <argLine>-Xmx4G -Xms4G</argLine>
+      <argLine>-Xmx4G -Xms4G --enable-preview</argLine>
      </configuration>
      <dependencies>
       <dependency>
